--- a/views/members/sign_in.html
+++ b/views/members/sign_in.html
@@ -1,13 +1,22 @@
-<form class="form-horizontal" method="post" autocomplete="off">
-  <fieldset>
-  <legend>Se connecter</legend>
-  <label for="inputEmail" class="col-lg-2 control-label">Email</label>
-  <div class="col-lg-10">
-    <input type="text" name="email" placeholder="E-mail address">
+<div ng-controller="SigninController">
+  <form class="form-horizontal" ng-submit="signin()" autocomplete="off">
+    <h3 class="text-center">Se connecter</h3>
+    <div class="row">
+      <label for="inputEmail" class="col-lg-2 control-label">Email</label>
+      <div class="col-lg-10">
+        <input ng-model="email" type="text" name="email" placeholder="E-mail address">
+      </div>
+    </div>
+    <div class="row">
+      <label for="inputPassword" class="col-lg-2 control-label">Mot de passe</label>
+      <div class="col-lg-10">
+        <input ng-model="password" type="password" name="password" placeholder="Password">
+      </div>
+    </div>
+    <input type="submit" value="Se connecter">
+  </form>
+
+  <div class="text-center">
+    Vous n'avez pas de compte ? <a href="#!/members/signup">S'inscrire</a>
   </div>
-  <label for="inputPassword" class="col-lg-2 control-label">Mot de passe</label>
-  <div class="col-lg-10">
-    <input type="password" name="password" placeholder="Password">
-  </div>
-</fieldset>
-</form>  
+</div>
