--- a/views/members.html
+++ b/views/members.html
@@ -1,35 +1,35 @@
-Vous êtes connecté !
-
-<div ng-controller="SignoutController">
-  <form ng-submit="signout()">
-      <button class="btn btn-danger">Se déconnecter</button>
-  </form>
+<div class="row">
+  <div class="col-lg-10" ng-controller="SignoutController">
+    <h6>  Vous êtes connecté ! </h6>
+    <form ng-submit="signout()">
+        <button class="btn btn-danger">Se déconnecter</button>
+    </form>
+  </div>
 </div>
 
-<ul class="collapsible popout" data-collapsible="accordion">
-        <li>
-            <div class="">Membres de l'équipe</div>
-            <div class="" ng-bind-html="memberslist"></div>
-        </li>
-        <li>
-            <div class="">Création de channels</div>
-            <div class="">
-                <h5>{{ channel.message }}</h5>
-                <form class="">
-                    <div class="input-field">
-                        <input id="label" type="text" class="validate" ng-model="channel.label" required>
-                        <label for="label">Label</label>
-                    </div>
-                    <div class="input-field">
-                        <input id="topic" type="text" class="validate" ng-model="channel.topic" required>
-                        <label for="topic">Topic</label>
-                    </div>
-                    <button class="btn"><a ng-click="creerChannel()">Créer le channel</a></button>
-                </form>
-            </div>
-        </li>
-        <li>
-            <button class="btn">Voir channels</button>
-            <div class="" ng-bind-html="channels"></div>
-        </li>
-    </ul>
+  <div class="col-lg-12">
+  <li>
+    <h4>Membres de l'équipe</h4>
+    <div ng-bind-html="memberslist"></div>
+  </li>
+  <li>
+    <form class="form-horizontal">
+        <h4>Création de channels</h4>
+
+        <div class="input-field">
+          <input id="label" type="text" class="validate" ng-model="channel.label" required>
+          <label for="label">Label</label>
+        </div>
+        <div class="input-field">
+          <input id="topic" type="text" class="validate" ng-model="channel.topic" required>
+          <label for="topic">Topic</label>
+        </div>
+        <button class="btn"><a ng-click="creerChannel()">Créer le channel</a></button>
+      </form>
+
+  </li>
+  <li>
+    <button class="btn">Voir channels</button>
+    <div ng-bind-html="channels"></div>
+  </li>
+</div>
